[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-intellinotify-env"
version = "0.1.0"
description = "IntelliNotify security notification triage environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
]

[project.scripts]
server = "intellinotify_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["intellinotify_env", "intellinotify_env.server"]
package-dir = { "intellinotify_env" = ".", "intellinotify_env.server" = "server" }
